actualizacion del html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
-                <p id="ganador"></p>
+                <p id="ganador" class="parrafoGanador"></p>
                 
             </div>
         </section>
